# usdc-hackathon

./: .gitignore  .moltbook  Anchor.toml  CONTRIBUTING.md  DEMO.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: ci.yml
app/: .gitignore  package-lock.json  package.json
app/src/app/: layout.tsx  page.tsx
app/src/app/app/: page.tsx
app/src/app/dashboard/: page.tsx
app/src/hooks/: useLegasi.ts  useLegasiDemo.ts
app/src/idl/: legasi_core.json  legasi_flash.json  legasi_gad.json  legasi_lending.json  legasi_leverage.json  legasi_lp.json
app/src/lib/: bridge.ts  legasi.ts  waitlist.ts
docs/: AGENT_QUICKSTART.md  ARCHITECTURE.md  DEVNET_DEPLOYMENT.md  PITCH_OUTLINE.md  SECURITY_AUDIT.md  SUBMISSION_CHECKLIST.md  VERCEL_DEPLOYMENT.md  VIDEO_SCRIPT.md  pitch.html
programs/legasi-core/src/: constants.rs  errors.rs  events.rs  interest.rs  lib.rs  market.rs  pyth.rs  state.rs
programs/legasi-credit/: Cargo.toml
programs/legasi-credit/src/: lib.rs
programs/legasi-flash/src/: lib.rs
programs/legasi-gad/src/: lib.rs
programs/legasi-lending/src/: lib.rs  x402.rs
programs/legasi-leverage/src/: lib.rs
programs/legasi-lp/src/: lib.rs
scripts/: demo-price-change.ts  deploy-vercel.sh  export-pitch-pdf.sh  init-cbbtc.ts  test-flash-e2e.ts
sdk/: README.md  package.json  tsconfig.json
sdk/src/: agent.ts  client.ts  constants.ts  flash.ts  gad.ts  index.ts  leverage.ts  types.ts  utils.ts
skill/legasi-lending/: SKILL.md
tests/: flash.ts  gad.ts  init-protocol.ts  legasi.ts  leverage.ts
(+7 files in other folders)
